--- a/components/index.html
+++ b/components/index.html
@@ -854,10 +854,10 @@
                         </div>
                         <div class="card-right">
                             <ul class="card-thumbs">
-                                <li><img src="../assets/img/friend-thumb.png" /></li>
-                                <li><img src="../assets/img/friend-thumb.png" /></li>
-                                <li><img src="../assets/img/friend-thumb.png" /></li>
-                                <li><img src="../assets/img/friend-thumb.png" /></li>
+                                <li style="background-image: url(../assets/img/friend-thumb.png)" ></li>
+                                <li style="background-image: url(../assets/img/friend-thumb.png)" ></li>
+                                <li style="background-image: url(../assets/img/friend-thumb.png)" ></li>
+                                <li style="background-image: url(../assets/img/friend-thumb.png)" ></li>
                             </ul>
                             <div class="rewards">
                                 <div class="rewards-left">
@@ -895,10 +895,10 @@
                         </div>
                         <div class="card-right">
                             <ul class="card-thumbs">
-                                <li><img src="../assets/img/friend-thumb.png" /></li>
-                                <li><img src="../assets/img/friend-thumb.png" /></li>
-                                <li><img src="../assets/img/friend-thumb.png" /></li>
-                                <li><img src="../assets/img/friend-thumb.png" /></li>
+                                <li style="background-image: url(../assets/img/friend-thumb.png)" ></li>
+                                <li style="background-image: url(../assets/img/friend-thumb.png)" ></li>
+                                <li style="background-image: url(../assets/img/friend-thumb.png)" ></li>
+                                <li style="background-image: url(../assets/img/friend-thumb.png)" ></li>
                             </ul>
                         </div>
                     </div>
