feeds page update

--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -129,6 +129,10 @@ a
 .br-1
   border-right: 1px solid $border
 
+.br-v
+  border-left: 1px solid $border
+  border-right: 1px solid $border
+
 .border
   border: 1px solid
   border-color: $border
