--- a/assets/sass/2-basics/_layout.sass
+++ b/assets/sass/2-basics/_layout.sass
@@ -20,6 +20,13 @@
     background: $white 
     margin-left: 16px
 
+.leftSidebar
+    width: 216px
+    float: left
+.rightSidebar
+    width: 216px
+    float: right
+    
 .center-content
     width: calc(100% - 432px)
     float: left
