--- a/assets/sass/3-component/_topbar.scss
+++ b/assets/sass/3-component/_topbar.scss
@@ -53,6 +53,9 @@
         .dropdown-toggle{
             cursor: pointer;
         }  
+        i{
+            font-size: $font-ml;
+        }
         span{
             color: $secondary-text;
         }   
