--- a/components/feeds.html
+++ b/components/feeds.html
@@ -141,11 +141,27 @@
                 </div>
             </div>
             <!-- app top -->
-            <div class="container-top mt-15">
+            <div class="container-top mt-15 mb-15">
                 <!-- content left -->
                 <div class="content-detail-left">
                     <div class="slider-wrapper">
 
+                    </div>
+                    <div class="more-info">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 text-center">
+                                <h5>Collection Items</h5>
+                                <div class="count">20</div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 text-center br-v">
+                                <h5>Completed Projects</h5>
+                                <div class="count">50</div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 text-center">
+                                <h5>Rank Apprentice</h5>
+                                <img class="rank-icon" src="../assets/img/rank.png" />
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -167,14 +183,25 @@
                             <h4>For agencies and companies</h4> 
                             <p>For agencies and companies, we're hosting workshops to make sure you get the best out of this Design System.make sure you get the best out of this Design System.make sure you get the best out of this Design System.</p>
                         </div>
+                        <div class="feed-footer top-feed-footer">
+                            <div class="feed-footer-left">
+                                <input type="button" class="btn silver-btn" value="View More" />
+                            </div>
+                            <div class="feed-footer-right">
+                                <a href="#"><i class="fa fa-heart"></i></a>
+                                <a href="#"><i class="fa fa-plus"></i></a>
+                                <a href="#"><i class="fa fa-share"></i></a>
+                            </div>
+                        </div>
                         <div class="feed-footer">
                             <div class="feed-footer-left">
                                 <span class="price">$30</span>
                                 <span class="price-sub">per hour</span>
                             </div>
                             <div class="feed-footer-right">
-                                <a href="#"><i class="fa fa-plus"></i></a>
-                                <a href="#"><i class="fa fa-share"></i></a>
+                                <!-- <a href="#"><i class="fa fa-plus"></i></a>
+                                <a href="#"><i class="fa fa-share"></i></a> -->
+                                <a href="#" class="btn success-btn right">Commission</a>
                             </div>
                         </div>
                     </div>
