--- a/components/index.html
+++ b/components/index.html
@@ -443,6 +443,13 @@
         <div class="row mt-20">
             <div class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-2">
                 <h4>Alerts</h4>
+                <div class="alert alert-orange alert-dismissible show" role="alert">
+                    <i class="fa fa-info-circle"></i> Warning. Loading of this page taking a way too long.
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+
                 <div class="alert alert-warning alert-dismissible show" role="alert">
                         Warning. Loading of this page taking a way too long.
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
