--- a/assets/sass/3-component/_chat.sass
+++ b/assets/sass/3-component/_chat.sass
@@ -41,6 +41,8 @@
 	overflow-x: hidden
 	overflow-y: auto
 	-moz-appearance: none !important
+	&.private-chat
+		max-height: calc(100vh - 310px) !important
 	&::-webkit-scrollbar
 		width: 4px		
 	&::-webkit-scrollbar-track
