--- a/assets/sass/3-component/_card.scss
+++ b/assets/sass/3-component/_card.scss
@@ -375,6 +375,9 @@
             width: 100px;
             max-height: 50px;
         }
+        .avatar-img{
+            max-height: unset;
+        }
     }
     .table-content{
         width: calc(100% - 300px);
