--- a/assets/sass/4-pages/_feeds.scss
+++ b/assets/sass/4-pages/_feeds.scss
@@ -35,6 +35,10 @@
         h4{
             color: $black;
         }
+        p{
+            color: $secondary-text;
+            white-space: pre-wrap;
+        }
     }
     .feed-footer{
         width: 100%;
@@ -68,6 +72,15 @@
             padding-bottom: 10px;
         }
     }
+}
+
+.feeds-no-options{
+  .feeds-wrapper{
+      height: 462px;
+      .feed-body{
+          height: calc(100% - 93px) !important;
+      }
+  }  
 }
 
 .more-info{
