--- a/assets/sass/3-component/_accordion.sass
+++ b/assets/sass/3-component/_accordion.sass
@@ -67,6 +67,11 @@
   .card-userlist
     padding: $p-0
 
+.notification-scroll
+  height: calc(100% - 36px)
+  .accordion-container
+    height: 100%
+    overflow: hidden auto
 
 /* Tabs for notification */
 .tabset-wrapper
