--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -23,6 +23,8 @@ a
   color: $gold !important
 .text-white
   color: $white !important
+.orange
+  color: $orange !important
 
 .facebook
   color: $facebook
