slider border-radius removed

--- a/assets/sass/3-component/_slickslider.scss
+++ b/assets/sass/3-component/_slickslider.scss
@@ -32,7 +32,7 @@
         -o-background-size: cover;
         background-size: cover;
         background-position: center center;
-        @include border-radius(5px);
+        // @include border-radius(5px);
         .anguvideo{
             height: 365px;
             iframe{
