--- a/components/index.html
+++ b/components/index.html
@@ -1305,7 +1305,7 @@
                                         <div class="form-group mt-30 mb-0">
                                             <label class="control-label">Add Images</label>
                                         </div>
-                                        <div class="upload-container">
+                                        <div class="upload-container upload-wrapper">
                                             <div class="upload-inner">
                                                 <div class="icon-container">
                                                     <div class="img-holder"><img src="./../assets/img/upload.png" title="upload" /></div>
@@ -1330,11 +1330,29 @@
                                         </div>
 
                                         <div class="thumb-wrapper mt-30">
-                                            <div class="thumbs" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;"></div>
-                                            <div class="thumbs active" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;"></div>
-                                            <div class="thumbs"></div>
-                                            <div class="thumbs"></div>
-                                            <div class="thumbs"></div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb active" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;"></div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
+                                            <div class="thumbs">
+                                                <div class="thumb" style="background: url('./../assets/img/img-thumb.png') no-repeat center center; background-size: cover; background-size: 100%;">
+
+                                                </div>
+                                            </div>
                                             <div class="thumbs"><div class="add-thumb">+</div></div>
                                         </div>
                                         <div class="upload-info success mt-0"><i class="fa fa-info-circle"></i> e.g Newly refurbished room for 2 people</div>
