--- a/assets/sass/3-component/_form-modal.scss
+++ b/assets/sass/3-component/_form-modal.scss
@@ -31,6 +31,14 @@
     padding: 10px;
     position: relative;
     cursor: pointer;
+    &.upload-wrapper{
+        width: 100%;
+        padding: 0px;
+        iframe, img, video{
+            width: 100%;
+            height: 100%;
+        }
+    }
     .upload-file{
         width: 100%;
         height: 100%;
@@ -110,16 +118,22 @@
         flex-basis: 31%;
         min-height: 60px;
         border: 1px solid $border;
-        @include border-radius(4px);
-        background: $white;
-        transition: all 0.2s;
+        @include border-radius(4px);        
         margin-bottom: 10px;
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        &:hover, &.active{
-            background: $success;
-            border: 5px solid $success;
+        .thumb{
+            width: 100%;
+            height: 100%;
+            background: $white;
+            transition: all 0.2s;
+            @include border-radius(4px); 
+            &:hover, &.active{
+                background: $success;
+                border: 5px solid $success;
+                transition: all 0.2s
+            }
         }
         .add-thumb{
             width: 38px;
