--- a/assets/sass/3-component/_accordion.sass
+++ b/assets/sass/3-component/_accordion.sass
@@ -77,10 +77,17 @@
 .tabset-wrapper
   width: 100%
   float: left
-  padding: 20px
-  border: 1px solid $border
+  // padding: 20px
+  // border: 1px solid $border
   background: $white
   @include border-radius(5px)
+
+.grid3 
+  label.tabs-label
+    width: 33.3333333333%
+    float: left
+    &:first-of-type, &:last-of-type
+      width: calc( 33.3333333333% - 15px )
 
 .tabset
   @extend .wd-100
@@ -97,6 +104,8 @@
   background: $white
 
 .tab-panel
+  width: 100%
+  float: left
   display: none
 
 .tabset > input:first-child:checked ~ .tab-panels > .tab-panel:first-child,
@@ -118,8 +127,8 @@
   text-transform: uppercase
   font-weight: $font-regular
   text-align: center
-  padding: 10px 25px
-  margin-bottom: 20px
+  padding: 15px
+  margin-bottom: 15px
   &:first-of-type
     margin-left: 15px
   &:last-of-type
@@ -155,10 +164,11 @@
   bottom: 0
   left: 0
   width: 100%
-  background: $default
-  transform: scaleX(0)
+  background: $silver
+  // transform: scaleX(0)
   @include transition($tab-transition)
 .tabset > input:checked + label::before
+  background: $default
   transform: scaleX(1)
 .tab-head
   label.connect
