--- a/assets/sass/3-component/_card.scss
+++ b/assets/sass/3-component/_card.scss
@@ -384,6 +384,21 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        &.listing{
+            width: calc(100% - 145px) !important;
+        }
+        .table-flex{
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            min-width: 40% !important;
+            .table-subcol{
+                min-width: 30%;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+            }
+        }
         .table-col{
             width: auto;
             float: left;
@@ -471,6 +486,27 @@
             }
         }
     }
+    .table-single-option{
+        width: auto;
+        position: relative;
+        img{
+            width: 35px;
+        }
+        .count{
+            position: absolute;
+            top: -5px;
+            right: -5px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 12px;
+            height: 12px;
+            font-size: $font-xs;
+            background: $danger;
+            @include border-radius(50%);
+            color: $white;
+        }
+    }
     .full-col{
         width: calc(100% - 170px);
         display: block;
@@ -478,5 +514,21 @@
         font-size: $font-s;
         font-weight: $font-medium;
         padding-left: 115px;
+    }
+}
+
+.saved-card{
+    width: 100%;
+    float: left;
+    padding: 12px;
+    border: 1px solid $border;
+    @include border-radius(5px);
+    img{
+        max-width: 100%;
+    }
+    p{
+        margin-bottom: 0px;
+        font-size: $font-s;
+        color: $secondary-text;
     }
 }
