--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -17,6 +17,13 @@
 		z-index: 10
 		margin-bottom: 5px
 		text-transform: uppercase
+	.label-img
+		padding: 5px
+		border: 1px solid $border
+		@include border-radius(5px)
+		float: left
+		margin-right: 5px
+		margin-bottom: 5px
 	.error
 		position: absolute
 		top: 0px
