--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -56,3 +56,4 @@
 @import "4-pages/usermain.scss";
 @import "4-pages/products.scss";
 @import "4-pages/feeds.scss";
+@import "4-pages/dashboard.scss";
