--- a/assets/sass/2-basics/_helpers.sass
+++ b/assets/sass/2-basics/_helpers.sass
@@ -40,20 +40,22 @@ a
 .opacity-0
   opacity: 0  
 
-.primary-bg
+.primary-bg, .bg-primary
   background: $primary
-.secondary-bg
+.secondary-bg, .bg-secondary
   background: $secondary
-.success-bg
+.success-bg, .bg-success
   background: $success
-.info-bg
+.info-bg, .bg-info
   background: $info
-.warning-bg
+.warning-bg, .bg-warning
   background: $warning
-.danger-bg
+.danger-bg, .bg-danger
   background: $danger
-.default-bg
+.default-bg, .bg-default
   background: $default
+.bg-pink
+  background: $pink
 .gold-bg
   background: $gold
 .black-bg
