--- a/assets/sass/3-component/_accordion.sass
+++ b/assets/sass/3-component/_accordion.sass
@@ -89,6 +89,13 @@
     &:first-of-type, &:last-of-type
       width: calc( 33.3333333333% - 15px )
 
+.grid4
+  label.tabs-label
+    width: 25%
+    float: left
+    &:first-of-type, &:last-of-type
+      width: calc( 25% - 15px )
+
 .tabset
   @extend .wd-100
   position: relative
