--- a/assets/sass/3-component/_progress.scss
+++ b/assets/sass/3-component/_progress.scss
@@ -2,6 +2,69 @@
 .progress-wrapper{
     width: 100%;
     float: left;
+    .progress{
+      width: 100%;
+      height: 10px;
+      float: left;
+      margin-bottom: 10px;
+    }
+    .progress-bar-success{
+      background: $success;
+    }
+    .progress-bar-warning{
+      background: $warning;
+    }
+    .progress-bar-info{
+      background: $info;
+    }
+    .progress-bar-danger{
+      background: $danger;
+    }
+}
+
+.progress-vertical-wrapper{
+  float: left;
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  .progress-bar{
+    width: 12px;
+  }
+  .progress-bar-vertical{
+    margin-right: 0px;
+    margin-bottom: 10px;
+  }
+  span{
+    font-size: $font-s;
+    color: $secondary-text;
+    text-transform: uppercase;
+  }
+}
+
+.progress-bar-vertical{
+  width: 12px;
+  min-height: 90px;
+  display: inline-flex;
+  align-items: flex-end;
+  margin-right: 18px;
+  float: left;
+  @include border-radius(9px);
+}
+
+.progress-label{
+  width: 100%;
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  h6{
+    margin: 0px;
+  }
+  span{
+    font-size: $font-s;
+  }
 }
 
 .progress-con {
