--- a/assets/sass/4-pages/_dashboard.scss
+++ b/assets/sass/4-pages/_dashboard.scss
@@ -53,6 +53,14 @@
     &:last-of-type{
         margin-left: 5%;
     }
+    .chart-wrapper{
+        width: 100%;
+        float: left;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+    
 }
 
 .table-listing{
